--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@types/react": "19.1.6",
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
+    "postcss": "^8.5.5",
+    "@tailwindcss/postcss": "^4.1.10",
+    "tailwindcss": "^4.1.10",
     "typescript": "5.8.3"
   }
 }
