--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-datepicker": "^6.2.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/node": "22.15.30",
     "@types/react": "19.1.6",
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
     "postcss": "^8.5.5",
-    "@tailwindcss/postcss": "^4.1.10",
     "tailwindcss": "^4.1.10",
     "typescript": "5.8.3"
   }
