--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 database.yml
 node_modules/
 .next
+
+# Python
+__pycache__/
+*.py[cod]
+*.egg
+*.egg-info/
+dist/
+build/
+env/
+.venv/
+venv/
+
+# LangChain / Chroma vector DB
+chroma_store/
+
+# VS Code
+.vscode/
+
+# Logs
+*.log
+
+# Environment variables
+.env
