--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
