--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@types/react-datepicker": "^6.2.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
