docker-compose along with required changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,45 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:15
     container_name: bookings-db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: bookings
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+
   server:
     build: ./server
     container_name: bookings-server
     depends_on:
       - db
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: secret
-      DB_NAME: bookings
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASS: ${DB_PASS}
+      DB_NAME: ${DB_NAME}
+      DB_SSL: ${DB_SSL}
+      PRODUCTION: ${PRODUCTION}
+      CACHE: ${CACHE}
     ports:
       - "8080:8080"
     restart: unless-stopped
+
   client:
     build: ./client
     container_name: bookings-client
     ports:
       - "3000:3000"
     environment:
-      NEXT_PUBLIC_API_URL: http://localhost:8080
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     restart: unless-stopped
+
 volumes:
   pgdata:
